Source/WebCore/rendering/svg/RenderSVGResourceSolidColor.h
@@ -24,6 +24,8 @@
 
 namespace WebCore {
 
+class RenderObject;
+
 class RenderSVGResourceSolidColor final : public RenderSVGResource {
     WTF_MAKE_FAST_ALLOCATED;
 public:
@@ -34,7 +36,7 @@ public:
     void removeClientFromCache(RenderElement&, bool = true) override { }
 
     bool applyResource(RenderElement&, const RenderStyle&, GraphicsContext*&, OptionSet<RenderSVGResourceMode>) override;
-    void postApplyResource(RenderElement&, GraphicsContext*&, OptionSet<RenderSVGResourceMode>, const Path*, const LegacyRenderSVGShape*) override;
+    void postApplyResource(RenderElement&, GraphicsContext*&, OptionSet<RenderSVGResourceMode>, const Path*, const RenderElement*) override;
     FloatRect resourceBoundingBox(const RenderObject&) override { return FloatRect(); }
 
     RenderSVGResourceType resourceType() const override { return SolidColorResourceType; }
